// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotifyService internal#format empty 1`] = `
"
## Run details

|  |  |
| :-- | :-- |
| **Core** | \`v0.0.0\` |
| **Runner** | \`test v0.0.0\` |
| **Origin** | http://localhost:3000 |
| **URLs** | 0 |
| **Duration** | 0ms |
| **Commit** | abc12345 |

## Audit details

:tada: All checks pass :tada:<p align=\\"right\\">Generated by :heart: <a href=\\"https://github.com/acot-a11y/acot\\">acot</a>.</p>"
`;

exports[`NotifyService internal#format mixed 1`] = `
"
## Run details

|  |  |
| :-- | :-- |
| **Core** | \`v0.0.0\` |
| **Runner** | \`test v0.0.0\` |
| **Origin** | http://localhost:3000 |
| **URLs** | 6 |
| **Duration** | 0ms |
| **Commit** | abc12345 |

## Audit summary

|  | Rule | Duration | Pass | Error | Warning |
| :-: | :-- | --: | --: | --: | --: |
| :x: | \`@acot/test/rule1\` | 1ms | 2 | 4 | 3 |
| :white_check_mark: | \`@acot/test/rule2\` | 2ms | 1 | - | - |
|  |  |  | - | - | - |

## Audit details

<details>
<summary><a href=\\"http://localhost:3000/\\">/</a> - :white_check_mark: 2 :warning: 3 :x: 2</summary>

|  | Rule | Details |
| :-: | :-- | :-- |
| :warning: | \`@acot/test/rule1\` | group1 |
| :warning: | \`@acot/test/rule1\` | group1<br /><br />at \`#rule1-warn3\`<br />see https://acot.example/help |
</details>

<details>
<summary><a href=\\"http://localhost:3000/path/to\\">/path/to</a> - :x: 4</summary>

|  | Rule | Details |
| :-: | :-- | :-- |
| :x: | \`@acot/test/rule1\` | group1<br /><br />at \`#rule1-error1\`<br />at \`#rule1-error2\` |
| :x: | \`@acot/test/rule1\` | group2<br /><br />see https://acot.example/help |
</details><p align=\\"right\\">Generated by :heart: <a href=\\"https://github.com/acot-a11y/acot\\">acot</a>.</p>"
`;
